<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:weightSum="1">

    <include
        android:id="@+id/tool_bar_edit"
        layout="@layout/tool_bar_edit"
        android:layout_width="414dp"
        android:layout_height="wrap_content"></include>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/enter_item"
        android:id="@+id/enterItem"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/enterItemfield"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Priority"
        android:id="@+id/Priority"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:clickable="false"
        android:id="@+id/radiopriority">

        <RadioButton
            android:id="@+id/radioLow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/low"
            android:textSize="15sp"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radioMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium"
            android:textSize="15sp"
            android:layout_marginLeft="20dp"/>
        <RadioButton
            android:id="@+id/radioHigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high"
            android:textSize="15sp"
            android:layout_marginLeft="20dp" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/status"
        android:id="@+id/Status"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:clickable="false"
        android:id="@+id/radiostatus">

        <RadioButton
            android:id="@+id/radionotdone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notdone"
            android:textSize="15sp"
            android:layout_marginLeft="20dp"/>

        <RadioButton
            android:id="@+id/radiodone"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/done"
            android:textSize="15sp"
            android:checked="true"/>

    </RadioGroup>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/deadline"
        android:id="@+id/deadline"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/finishby"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/comments"
        android:id="@+id/comments"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/commenttext"
        android:layout_gravity="center_horizontal" />

</LinearLayout>